--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,15 @@ body {
 footer a {
   color: gray;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+}
+
+body {
+  -ms-overflow-style: none;
+}
